gcc/testsuite/g++.dg/modules/legacy-0b.H
// { dg-additional-options "-fmodule-header=\"<sys\"" }
// { dg-error "badly quoted" "" { target *-*-* } 0 }
